<resources>
    <string name="app_name">Demo</string>
    <string name="text_tip">口算测试</string>
    <string name="button_enter">开始测试</string>
    <string name="textViewMax">最高纪录</string>
    <string name="mathDescription">math</string>
    <string name="submit">提交</string>
    <string name="textview">TextView</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
</resources>
